--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   Ayurveda Koderma and Yog Paramarsh
+   <h1>Ayurveda Koderma and Yog Paramarsh</h1>
+   <h3>Yogi Sushma Suman</h3>
+
+   <div class="card-container">
+      <div class="card">
+         <div class="card-head">20+</div>
+         <div class="card-subhead">Years of Experience</div>
+      </div>
+      <div class="card">
+         <div class="card-head">3000+</div>
+         <div class="card-subhead">patients treated</div>
+      </div>
+      <div class="card">
+         <div class="card-head">70+</div>
+         <div class="card-subhead">diseases cured</div>
+      </div>
+   </div>
 </body>
 </html>
