basic site complete

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="about-content">
                 <div class="about-text fade-in">
                     <h2>Personalized Care Through Ancient Wisdom</h2>
-                    <p>With years of experience in Ayurvedic medicine and yoga consultation, I believe in treating the root cause rather than just the symptoms. My approach combines traditional knowledge with compassionate care.</p>
+                    <p>With more than <b>20 years</b> of experience in Ayurvedic medicine and yoga consultation, I believe in treating the root cause rather than just the symptoms. My approach combines traditional knowledge with compassionate care.</p>
                     <p>Every consultation begins with careful listening and understanding of your unique health journey, ensuring that the treatment plan is perfectly aligned with your needs.</p>
                     <ul class="about-features">
                         <li><i class="fas fa-check-circle"></i> Detailed Personal Consultation</li>
@@ -134,7 +134,7 @@
                     <strong>Disclaimer:</strong> Ayurvedic treatments mentioned on this website are based on traditional practices and individual experiences may vary. Please consult with qualified healthcare professionals for serious medical conditions. Our services complement but do not replace conventional medical treatment.
                 </div>
                 <div class="copyright">
-                    <p>&copy; <span id="current-year"></span> Ayurveda Chikitsak. All rights reserved. | Crafted with care for holistic healing.</p>
+                    <p>&copy; <span id="current-year"></span> Ayurved Koderma. All rights reserved. | Crafted with care for holistic healing.</p>
                 </div>
             </div>
         </div>
