name added to hero section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. [Name] - Ayurveda Chikitsak & Yog Paramarsh</title>
+    <title>Yogi Sushma Suman - Ayurved Chikitsa & Yog Paramarsh</title>
     <meta name="description" content="Expert Ayurvedic consultation and yoga guidance. Personalized herbal medicines and wellness solutions.">
     
     <!-- Google Fonts -->
@@ -44,7 +44,8 @@
             <div class="hero-content">
                 <div class="hero-text fade-in">
                     <h1>Welcome to Holistic Healing</h1>
-                    <p class="subtitle">Experienced Ayurveda Chikitsak & Yoga Consultant</p>
+                    <p class="sub-subtitle">-with Yogi Sushma Suman</p>
+                    <p class="subtitle">(Experienced Ayurveda Chikitsak & Yoga Consultant)</p>
                     <p>Discover the ancient wisdom of Ayurveda combined with personalized care. I provide traditional herbal medicines after carefully listening to your health concerns and offer expert yoga guidance for complete wellness.</p>
                     <div class="cta-buttons">
                         <a href="#contact" class="btn btn-primary">
