--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yogi Sushma Suman - Ayurved Chikitsa & Yog Paramarsh</title>
-    <meta name="description" content="Expert Ayurvedic consultation and yoga guidance. Personalized herbal medicines and wellness solutions.">
+    <meta name="description" content="Expert Ayurvedic consultation and yoga guidance in Koderma. Personalized herbal medicines and wellness solutions.">
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
@@ -43,7 +43,8 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text fade-in">
-                    <h1>Welcome to Holistic Healing</h1>
+                    <h1>Welcome to Ayurved Koderma
+                    </h1>
                     <p class="sub-subtitle">-with Yogi Sushma Suman</p>
                     <p class="subtitle">(Experienced Ayurveda Chikitsak & Yoga Consultant)</p>
                     <p>Discover the ancient wisdom of Ayurveda combined with personalized care. I provide traditional herbal medicines after carefully listening to your health concerns and offer expert yoga guidance for complete wellness.</p>
@@ -117,9 +118,9 @@
             <div class="contact-methods">
                 <a href="tel:+919876543210" class="contact-btn">
                     <i class="fas fa-phone"></i>
-                    Call Now: +91 98765 43210
+                    Call Now: +91 96607 77331
                 </a>
-                <a href="https://wa.me/919876543210?text=Hello, I would like to book an Ayurveda consultation." class="contact-btn" target="_blank">
+                <a href="https://wa.me/919660777331?text=Hello, I would like to book an Ayurveda consultation." class="contact-btn" target="_blank">
                     <i class="fab fa-whatsapp"></i>
                     Chat on WhatsApp
                 </a>
