corrected the wrong phone number in whatsapp chat button

--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
                 <li><a href="#services" title="Ayurveda Services">Services</a></li>
                 <li><a href="#about" title="About Yogi Sushma Suman">About</a></li>
                 <li><a href="#contact" title="Contact Ayurveda Doctor">Contact</a></li>
-                <li><a href="https://wa.me/919660777331?text=Hello, I would like to book an Ayurveda consultation." target="_blank" rel="noopener">Consult</a></li>
+                <li>
+    <a href="https://wa.me/918630685903?text=Hello, I would like to book an Ayurveda consultation." 
+       target="_blank" 
+       class="nav-consult-btn">
+       <i class="fab fa-whatsapp"></i> Consult
+    </a>
+</li>
+
             </ul>
             <div class="mobile-menu" onclick="toggleMobileMenu()" role="button" aria-label="Toggle Menu">
                 <span></span><span></span><span></span>
@@ -123,7 +130,7 @@
                 <a href="tel:+918630685903" class="contact-btn">
                     <i class="fas fa-phone"></i> Call Now: +91 86306 85903
                 </a>
-                <a href="https://wa.me/918639685903?text=Hello, I would like to book an Ayurveda consultation." class="contact-btn" target="_blank" rel="noopener">
+                <a href="https://wa.me/918630685903?text=Hello, I would like to book an Ayurveda consultation." class="contact-btn" target="_blank" rel="noopener">
                     <i class="fab fa-whatsapp"></i> Chat on WhatsApp
                 </a>
             </div>
